--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,7 @@ body {
     background-color: #dfe4e4;
     padding-top: 3rem;
     padding-bottom: 3.5rem;
+    overflow: hidden;
 
 }
 
@@ -40,8 +41,8 @@ body {
 
 .typingBar {
     width: 100%;
-    height: 3rem;
-    background-color: #fff;
+    height: auto;
+    /* background-color: #fff; */
     position: absolute;
     bottom: 0;
     display: flex;
@@ -56,13 +57,22 @@ body {
     border: none;
     outline: none;
     font-size: 1.1rem;
+    width: 100%;
+    min-height: 2.5rem;
+    overflow-y: hidden;
+    resize: none;
+    border-radius: 11px;
+    margin-bottom: .3rem;
+    margin-left: .3rem;
+    padding: .2rem 1rem;
+
 }
 
 .sendButton {
     width: 3rem;
     height: auto;
     background-color: #bff4f0;
-    background-color: transparent;
+    background-color: #fff;
     border: none;
     outline: none;
     cursor: pointer;
@@ -70,11 +80,15 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    padding: .3rem;
+    padding: 0.5rem;
+    align-self: flex-end;
+    margin-left: .3rem;
+    margin-bottom: .3rem;
+    margin-right: .2rem;
 }
 
 .sendBtn {
-    max-width: 2.2rem;
+    max-width: 1.7rem;
     height: auto;
 }
 
@@ -89,6 +103,7 @@ body {
     padding: .3rem;
     overflow: scroll;
     padding-top: 1rem;
+    margin-bottom: .6rem;
 }
 
 /* hiding scroll bar for better UI */
@@ -115,11 +130,18 @@ body {
     padding: .4rem .5rem;
     background-color: antiquewhite;
     border-radius: 4px;
+
+
 }
 
 .messagesArea .message p {
     font-size: .8rem;
     font-weight: 600;
+    white-space: normal;
+    /* Ensures text wraps */
+    overflow-wrap: break-word;
+    max-width: 100%;
+
 }
 
 .messagesArea .message {
@@ -135,6 +157,7 @@ body {
 
 .message.senderUser {
     margin-right: auto;
+    background-color: rgb(249, 242, 232);
 }
 
 .message .date {
@@ -143,4 +166,29 @@ body {
     margin-top: auto;
     margin-left: auto;
     margin-bottom: -.4rem;
+}
+
+/* editing header */
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: .5rem 1rem;
+}
+
+.header .menu {
+    cursor: pointer;
+}
+
+.header img {
+    max-width: 1.6rem;
+    height: auto;
+    position: relative;
+    z-index: 1000;
+}
+
+.header .receiver h2 {
+    font-weight: 500;
+    text-align: center;
 }
