--- a/client/src/index.css
+++ b/client/src/index.css
@@ -192,3 +192,28 @@ body {
     font-weight: 500;
     text-align: center;
 }
+
+.signouttArea {
+    margin-top: auto;
+    margin-bottom: 1rem;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.signouttArea .signout {
+    background-color: #f3f3f3;
+    padding: .3rem .5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: .9rem;
+    font-weight: 600;
+    color: #6b4848;
+    text-decoration: none;
+    padding: .5rem .7rem;
+}
+
+.signout:hover {
+    background-color: #e9ecef;
+}
