--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 5rem;
-    background-color: rgb(84, 123, 123);
+    /* padding-top: 5rem; */
+    background-color: rgb(157, 181, 181);
 }
 
 .container {
@@ -26,8 +26,11 @@ body {
     position: relative;
     background-color: #dfe4e4;
     padding-top: 3rem;
-    padding-bottom: 3.5rem;
+    /* padding-bottom: 3.5rem; */
     overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
 
 }
 
@@ -174,7 +177,6 @@ body {
     align-items: center;
     justify-content: flex-start;
     gap: 1rem;
-    padding: .5rem 1rem;
 }
 
 .header .menu {
