can send friend requests now - not fully functional yet

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -22,8 +22,13 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    position: relative;
 }
 
 .header .header-sections .section:hover {
     background-color: #fff;
+}
+
+.header .header-sections .section a {
+    position: relative;
 }
