--- a/client/src/createAccounts.css
+++ b/client/src/createAccounts.css
@@ -4,6 +4,27 @@
     box-sizing: border-box;
 }
 
+.loginContainer,
+.signupContainer {
+    display: flex;
+    align-items: center;
+    height: 30rem;
+    width: 22rem;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+    flex-direction: column;
+
+    position: relative;
+    background-color: #dfe4e4;
+    padding-top: 3rem;
+    /* padding-bottom: 3.5rem; */
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    max-width: 25rem;
+
+}
+
 .container h1 {
     text-align: center;
     margin-bottom: 1rem;
@@ -19,7 +40,7 @@
     flex-direction: column;
     position: relative;
     overflow: hidden;
-    gap: 1rem;
+    gap: .5rem;
     width: 90%;
     height: auto;
 }
