--- a/client/src/styles/Friends.css
+++ b/client/src/styles/Friends.css
@@ -21,6 +21,7 @@
     justify-content: flex-start;
     /* padding: 1rem .4rem; */
     gap: .5rem;
+    position: relative;
 }
 
 .firends-sugg-tag h2 {
@@ -37,6 +38,7 @@
     align-items: center;
     justify-content: center;
     align-self: flex-start;
+    position: relative;
 }
 
 .friends-actions button {
@@ -48,6 +50,7 @@
     color: #252525;
     cursor: pointer;
     font-size: 1rem;
+    position: relative;
 }
 
 .friend-req-tag {
@@ -64,6 +67,11 @@
     border-radius: 5px;
     box-shadow: 0 0 5px #c9c9c9;
     position: relative;
+    cursor: pointer;
+}
+
+.friend-req-tag:hover {
+    box-shadow: 0 0 10px #c9c9c9;
 }
 
 .friend-req-tag .friendProfilePic img {
