--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
-    background-color: #dfe4e4;
+    background-color: #fff;
     padding-top: 3rem;
     /* padding-bottom: 3.5rem; */
     overflow: hidden;
