--- a/client/src/styles/Friends.css
+++ b/client/src/styles/Friends.css
@@ -12,7 +12,9 @@
 
 }
 
-.firends-sugg-tag {
+.friends-sugg-tag,
+.friend-reqs-page,
+.friends {
     width: 100%;
     height: auto;
     display: flex;
@@ -24,7 +26,9 @@
     position: relative;
 }
 
-.firends-sugg-tag h2 {
+.friends-sugg-tag h2,
+.friend-reqs-page h2,
+.friends h2 {
     font-size: 1.2rem;
     font-weight: 500;
     color: #252525;
@@ -45,15 +49,16 @@
     padding: 0.3rem 0.7rem;
     border: none;
     border-radius: 10px;
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(242, 242, 242);
     font-weight: 500;
     color: #252525;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 0.8rem;
     position: relative;
 }
 
-.friend-req-tag {
+.friend-req-tag,
+.friends-list .friend-tag {
     width: 100%;
     height: 4.5rem;
     display: flex;
@@ -70,24 +75,31 @@
     cursor: pointer;
 }
 
+.friend-tag {
+    min-width: 100%;
+}
+
 .friend-req-tag:hover {
     box-shadow: 0 0 10px #c9c9c9;
 }
 
-.friend-req-tag .friendProfilePic img {
+.friend-req-tag .friendProfilePic img,
+.friends-list .friendProfilePic img {
     max-width: 2.4rem;
     height: auto;
     border-radius: 50%;
 }
 
-.friend-req-tag .friendInfo {
+.friend-req-tag .friendInfo,
+.friends-list .friendInfo {
     margin-right: auto;
     display: flex;
     flex-direction: column;
     gap: .2rem;
 }
 
-.friend-req-tag .friendName {
+.friend-req-tag .friendName,
+.friends-list .friendName {
     font-size: .95rem;
     font-weight: 500;
     color: #252525;
@@ -102,25 +114,38 @@
 }
 
 .friend-req-tag .inviteBtn {
-    padding: .2rem .5rem;
+    padding: .3rem .6rem;
     border: none;
     background-color: rgb(144, 196, 196);
     border-radius: 3px;
-    font-weight: 500;
-    max-width: 3.5rem;
+    font-weight: 600;
+    max-width: 3.8rem;
     color: #252525;
     cursor: pointer;
     color: rgb(250, 250, 250);
+    font-size: 0.8rem;
 }
 
 .friend-req-tag .removeBtn {
-    padding: .2rem .5rem;
+    padding: .3rem .6rem;
     border: none;
     background-color: rgb(255, 141, 185);
     border-radius: 3px;
-    font-weight: 500;
-    max-width: 4rem;
+    font-weight: 600;
+    max-width: 4.5rem;
     color: #252525;
     cursor: pointer;
     color: rgb(255, 255, 255);
+    font-size: 0.8rem;
+}
+
+.friends-list .messageBtn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.friends-list .messageBtn img {
+    max-width: 2rem;
+    height: auto;
 }
