--- a/client/src/styles/Friends.css
+++ b/client/src/styles/Friends.css
@@ -119,7 +119,7 @@
     background-color: rgb(144, 196, 196);
     border-radius: 3px;
     font-weight: 600;
-    max-width: 3.8rem;
+    max-width: 5.8rem;
     color: #252525;
     cursor: pointer;
     color: rgb(250, 250, 250);
@@ -143,6 +143,7 @@
     background-color: transparent;
     border: none;
     outline: none;
+    cursor: pointer;
 }
 
 .friends-list .messageBtn img {
