--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,6 +114,7 @@ body {
     overflow: scroll;
     padding-top: 3.5rem;
     background-color: #fff;
+    padding-bottom: 3.3rem;
 }
 
 /* hiding scroll bar for better UI */
