--- a/client/src/styles/Friends.css
+++ b/client/src/styles/Friends.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: flex-start;
     /* padding: 1rem .4rem; */
-    gap: .5rem;
+    /* gap: .5rem; */
     position: relative;
 }
 
@@ -33,6 +33,7 @@
     font-weight: 500;
     color: #252525;
     align-self: flex-start;
+    margin-bottom: 1rem;
 }
 
 .friends-actions {
@@ -60,7 +61,7 @@
 .friend-req-tag,
 .friends-list .friend-tag {
     width: 100%;
-    height: 4.5rem;
+    height: 3.8rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -70,9 +71,11 @@
     padding: .5rem;
     padding: .5rem;
     border-radius: 5px;
-    box-shadow: 0 0 5px #c9c9c9;
+    /* box-shadow: 0 0 5px #c9c9c9; */
     position: relative;
     cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .friend-tag {
@@ -85,9 +88,15 @@
 
 .friend-req-tag .friendProfilePic img,
 .friends-list .friendProfilePic img {
-    max-width: 2.4rem;
+    max-width: 2.3rem;
     height: auto;
     border-radius: 50%;
+}
+
+.friendProfilePic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .friend-req-tag .friendInfo,
@@ -95,13 +104,13 @@
     margin-right: auto;
     display: flex;
     flex-direction: column;
-    gap: .2rem;
+    gap: 0;
 }
 
 .friend-req-tag .friendName,
 .friends-list .friendName {
-    font-size: .95rem;
-    font-weight: 500;
+    font-size: .85rem;
+    font-weight: 400;
     color: #252525;
 }
 
@@ -114,7 +123,7 @@
 }
 
 .friend-req-tag .inviteBtn {
-    padding: .3rem .6rem;
+    padding: .2rem .6rem;
     border: none;
     background-color: rgb(144, 196, 196);
     border-radius: 3px;
@@ -127,7 +136,7 @@
 }
 
 .friend-req-tag .removeBtn {
-    padding: .3rem .6rem;
+    padding: .2rem .6rem;
     border: none;
     background-color: rgb(255, 141, 185);
     border-radius: 3px;
@@ -147,6 +156,6 @@
 }
 
 .friends-list .messageBtn img {
-    max-width: 2rem;
+    max-width: 1.7rem;
     height: auto;
 }
