--- a/client/src/styles/Messages.css
+++ b/client/src/styles/Messages.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: flex-start;
     padding: 1rem 0;
-    gap: .5rem;
+
     position: relative;
 
 }
@@ -17,7 +17,7 @@
     font-weight: 600;
     color: #252525;
     align-self: flex-start;
-    margin-bottom: .6rem;
+    margin-bottom: .8rem;
     padding-left: .4rem;
     width: 100%;
 }
@@ -25,7 +25,7 @@
 .message-req-tag {
     display: flex;
     width: 100%;
-    height: 4rem;
+    height: 3.5rem;
     gap: 1rem;
     align-items: center;
     justify-content: space-between;
@@ -33,7 +33,7 @@
     padding: .5rem;
     padding: .5rem;
     border-radius: 5px;
-    box-shadow: 0 0 5px #c9c9c9;
+    /* box-shadow: 0 0 5px #c9c9c9; */
     position: relative;
     cursor: pointer;
 }
@@ -63,7 +63,7 @@
     display: flex;
     flex-direction: column;
     gap: .2rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
 }
 
@@ -95,11 +95,12 @@
     padding-left: .4rem;
     padding-right: .6rem;
     border-bottom: 2px solid #2525254d;
+    z-index: 10000;
 }
 
 .messagesHeader h3 {
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 0.9rem;
+    font-weight: 400;
     color: #252525;
     margin-right: auto;
     margin-bottom: 0.3rem;
@@ -110,4 +111,9 @@
     height: auto;
     cursor: pointer;
     align-self: flex-start;
+}
+
+.init-chat-label {
+    font-size: .7rem;
+    font-weight: 400;
 }
