--- a/client/src/styles/Messages.css
+++ b/client/src/styles/Messages.css
@@ -96,6 +96,8 @@
     padding-right: .6rem;
     border-bottom: 2px solid #2525254d;
     z-index: 10000;
+    position: fixed;
+    top: 2.8rem;
 }
 
 .messagesHeader h3 {
