--- a/client/src/styles/Friends.css
+++ b/client/src/styles/Friends.css
@@ -62,7 +62,7 @@
 .friend-req-tag,
 .friends-list .friend-tag {
   width: 100%;
-  height: 3.8rem;
+  height: 3.1rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -106,14 +106,15 @@
   margin-right: auto;
   display: flex;
   flex-direction: column;
-  gap: 0;
+  gap: 6px;
 }
 
 .friend-req-tag .friendName,
 .friends-list .friendName {
-  font-size: .85rem;
-  font-weight: 400;
+  font-size: 0.85rem;
+  font-weight: 500;
   color: #252525;
+  line-height: 1;
 }
 
 .friend-req-tag .friendActions {
@@ -161,4 +162,12 @@
   max-width: 1.7rem;
   height: auto;
   display: none;
+}
+
+.suggestions-list {
+  gap: 1rem;
+}
+
+.suggestions-list h2 {
+  margin-bottom: 0;
 }
