--- a/client/src/styles/Messages.css
+++ b/client/src/styles/Messages.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
 
   position: relative;
   overflow: scroll;
@@ -37,6 +37,7 @@
   /* box-shadow: 0 0 5px #c9c9c9; */
   position: relative;
   cursor: pointer;
+  margin-bottom: -6px;
 }
 
 /* .message-sugg-tag {
@@ -115,8 +116,9 @@
 }
 
 .init-chat-label {
-  font-size: .7rem;
-  font-weight: 400;
+  font-size: 0.7rem;
+  font-weight: 401;
+  color: #4a647f;
 }
 
 .MsgContactInfo {
