--- a/client/src/styles/Posts.css
+++ b/client/src/styles/Posts.css
@@ -95,7 +95,7 @@
   align-items: flex-start;
   padding: .5rem;
   border-radius: 5px;
-  box-shadow: 0 0 .9px #c9c9c9;
+  box-shadow: 0px 0 1.9px #5e5e5e;
   position: relative;
 }
 
